--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>springCloud-eurekaSingleServer</module>
         <module>springCloud-serviceSingleProvider</module>
         <module>springCloud-serviceSingleConsumerWithFeign</module>
+        <module>springCloud-serviceConsumerWithRibbonAndHystrix</module>
     </modules>
 
     <!--系统公共的属性-->
