--- a/springCloud-eurekaServer/src/main/resources/application.properties
+++ b/springCloud-eurekaServer/src/main/resources/application.properties
@@ -7,4 +7,5 @@ eureka.client.register-with-eureka=false
 #\u8868\u793A\u662F\u5426\u4ECEEureka Server\u83B7\u53D6\u6CE8\u518C\u4FE1\u606F\uFF0C\u9ED8\u8BA4\u4E3Atrue
 eureka.client.fetch-registry=false
 #\u8BBE\u7F6E\u4E0EEureka Server\u4EA4\u4E92\u7684\u5730\u5740\uFF0C\u67E5\u8BE2\u670D\u52A1\u548C\u6CE8\u518C\u670D\u52A1\u90FD\u9700\u8981\u4F9D\u8D56\u8FD9\u4E2A\u5730\u5740\u3002\u9ED8\u8BA4\u662Fhttp://localhost:8761/eureka \uFF1B\u591A\u4E2A\u5730\u5740\u53EF\u4F7F\u7528 , \u5206\u9694
-eureka.client.serviceUrl.defaultZone=http://peer2:1112/eureka/,http://peer3:1113/eureka/
+#eureka.client.serviceUrl.defaultZone=http://peer2:1112/eureka/,http://peer3:1113/eureka/
+eureka.client.serviceUrl.defaultZone=http://peer1:1111/eureka/
