--- a/springCloud-serviceSingleConsumerWithFeign/src/main/resources/application.properties
+++ b/springCloud-serviceSingleConsumerWithFeign/src/main/resources/application.properties
@@ -3,4 +3,4 @@ eureka.instance.hostname=peer3
 server.port=3333
 eureka.client.service-url.defaultZone=http://peer1:1111/eureka/
 #\u5F00\u542F\u7194\u65AD\u652F\u6301
-feign.hystrix.enabled=true
+#feign.hystrix.enabled=true
