--- a/springCloud-configServer/src/main/resources/application.properties
+++ b/springCloud-configServer/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.cloud.config.server.git.uri=https://github.com/xym-loveit/springCloud-pro
 #git\u4ED3\u5E93\u5730\u5740\u4E0B\u7684\u76F8\u5BF9\u5730\u5740\uFF0C\u53EF\u4EE5\u914D\u7F6E\u591A\u4E2A\uFF0C\u7528,\u5206\u5272
 spring.cloud.config.server.git.search-paths=config-repo
 #git\u4ED3\u5E93\u7684\u8D26\u53F7
-spring.cloud.config.server.git.username=xym_loveit@126.com
+spring.cloud.config.server.git.username=xxxx
 #git\u4ED3\u5E93\u7684\u5BC6\u7801
-spring.cloud.config.server.git.password=201025xym##$$
+spring.cloud.config.server.git.password=xxxx
