--- a/springCloud-configClient-service-bus/pom.xml
+++ b/springCloud-configClient-service-bus/pom.xml
@@ -38,10 +38,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <!--消息总线-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
-        </dependency>
+        <!--  <dependency>
+              <groupId>org.springframework.cloud</groupId>
+              <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+          </dependency>-->
     </dependencies>
 
     <dependencyManagement>
