--- a/springCloud-configClient-service-bus/src/main/resources/application-two.properties
+++ b/springCloud-configClient-service-bus/src/main/resources/application-two.properties
@@ -2,7 +2,7 @@
 server.port=1115
 spring.application.name=config-client
 #\u5237\u65B0\u65F6\uFF0C\u5173\u95ED\u5B89\u5168\u9A8C\u8BC1
-management.security.enabled=false
+#management.security.enabled=false
 #\u5F00\u542F\u6D88\u606F\u8FFD\u8E2A
 spring.cloud.bus.trace.enabled=true
 #rabbitmq config
