--- a/springCloud-configServer-service-bus/src/main/resources/application.properties
+++ b/springCloud-configServer-service-bus/src/main/resources/application.properties
@@ -3,7 +3,17 @@ spring.application.name=config-server
 #git \u914D\u7F6E
 spring.cloud.config.server.git.uri=https://github.com/xym-loveit/springCloud-project.git
 spring.cloud.config.server.git.search-paths=config-repo
-spring.cloud.config.server.git.password=xym_loveit@126.com
-spring.cloud.config.server.git.username=201025xym##$$
+spring.cloud.config.server.git.password=xxxx
+spring.cloud.config.server.git.username=xxxx
 #\u6CE8\u518C\u4E2D\u5FC3
 eureka.client.service-url.defaultZone=http://localhost:1111/eureka/
+## \u5237\u65B0\u65F6\uFF0C\u5173\u95ED\u5B89\u5168\u9A8C\u8BC1
+management.security.enabled=false
+### \u5F00\u542F\u6D88\u606F\u8DDF\u8E2A
+spring.cloud.bus.trace.enabled=true
+#rabbitmq config
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=xym
+spring.rabbitmq.password=123456
+spring.rabbitmq.virtual-host=/xym
