--- a/springCloud-configClient-service-bus/src/main/resources/application.properties
+++ b/springCloud-configClient-service-bus/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #debug=true
-spring.profiles.active=one
+spring.profiles.active=two
 server.port=1113
 spring.application.name=config-client
 #\u5237\u65B0\u65F6\uFF0C\u5173\u95ED\u5B89\u5168\u9A8C\u8BC1
