--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,15 @@
         <module>springCloud-eurekaHA-server5</module>
         <module>springCloud-configServer-service-bus</module>
         <module>springCloud-configClient-service-bus</module>
+        <module>microservice-simple-provider-user</module>
+        <module>microservice-simple-consumer-movie</module>
+        <module>microservice-discovery-eureka</module>
+        <module>microservice-provider-user</module>
+        <module>microservice-consumer-movie</module>
+        <module>microservice-discovery-eureka-ha</module>
+        <module>microservice-discovery-eureka-authenticating</module>
+        <module>microservice-provider-user-my-metadata</module>
+        <module>microservice-consumer-movie-understanding-metadata</module>
     </modules>
 
     <!--系统公共的属性-->
