--- a/microservice-provider-user/src/main/resources/application.yml
+++ b/microservice-provider-user/src/main/resources/application.yml
@@ -18,6 +18,8 @@ spring:
       ignored-interfaces:
         - docker0
         - veth.*
+  profiles:
+    active: dev
 logging: #配置日志级别，让hibernate打印执行的sql
   level:
     root: info
@@ -27,9 +29,9 @@ logging: #配置日志级别，让hibernate打印执行的sql
 eureka:
   client:
     service-url:
-      defaultZone: http://peer1:8761/eureka/,http://peer2:8762/eureka/
+      defaultZone: http://peer1:8761/eureka/
+##,http://peer2:8762/eureka/
   instance:
     prefer-ip-address: true #表示将自己的ip注册到Eureka Server
-healcheck
 
 
