--- a/microservice-simple-provider-user/src/main/resources/application.yml
+++ b/microservice-simple-provider-user/src/main/resources/application.yml
@@ -17,3 +17,7 @@ logging: #配置日志级别，让hibernate打印执行的sql
     org.hibernate.type.descriptor.sql.BasicBinder: trace
     org.hibernate.type.descriptor.sql.BasicExtractor: trace
 
+---
+spring:
+  application:
+    name: abcdef
