--- a/microservice-consumer-movie-feign-customizing/pom.xml
+++ b/microservice-consumer-movie-feign-customizing/pom.xml
@@ -9,17 +9,18 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>microservice-consumer-movie-feign</artifactId>
+    <artifactId>microservice-consumer-movie-feign-customizing</artifactId>
 
-    <name>microservice-consumer-movie-feign</name>
-    <!-- FIXME change it to the project's website -->
+    <name>microservice-consumer-movie-feign-customizing</name>
     <url>http://www.example.com</url>
+    <description>自定义feign的配置</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
+
 
     <dependencies>
         <dependency>
