--- a/microservice-consumer-movie-feign-manual/pom.xml
+++ b/microservice-consumer-movie-feign-manual/pom.xml
@@ -9,11 +9,11 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>microservice-consumer-movie-feign</artifactId>
+    <artifactId>microservice-consumer-movie-feign-manual</artifactId>
 
-    <name>microservice-consumer-movie-feign</name>
-    <!-- FIXME change it to the project's website -->
+    <name>microservice-consumer-movie-feign-manual</name>
     <url>http://www.example.com</url>
+    <description>手动创建feign客户端调用</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
