--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,10 @@
         <module>microservice-consumer-movie-feign-customizing</module>
         <module>microservice-provider-user-with-auth</module>
         <module>microservice-consumer-movie-feign-manual</module>
+        <module>microservice-consumer-movie-feign-logging</module>
+        <module>microservice-consumer-movie-ribbon-hystrix</module>
+        <module>mock-more-requestClient</module>
+        <module>microservice-consumer-movie-feign-hystrix-fallback</module>
     </modules>
 
     <!--系统公共的属性-->
