--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,8 @@
         <module>microservice-consumer-movie-feign-hystrix-fallback</module>
         <module>microservice-consumer-movie-feign-hystrix-fallback-factory</module>
         <module>microservice-consumer-movie-feign-hystrix-fallback-stream</module>
+        <module>microservice-hystrix-dashboard</module>
+        <module>microservice-hystrix-turbine</module>
     </modules>
 
     <!--系统公共的属性-->
