--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
         <module>microservice-consumer-movie-feign-hystrix-fallback-stream</module>
         <module>microservice-hystrix-dashboard</module>
         <module>microservice-hystrix-turbine</module>
+        <module>microservice-gateway-zuul</module>
     </modules>
 
     <!--系统公共的属性-->
