--- a/microservice-consumer-movie-ribbon/pom.xml
+++ b/microservice-consumer-movie-ribbon/pom.xml
@@ -70,6 +70,7 @@
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>1.4.5.RELEASE</version>
                     <executions>
                         <execution>
                             <goals>
