--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,10 @@
         <module>microservice-config-server</module>
         <module>microservice-config-client</module>
         <module>microservice-config-server-encryption</module>
+        <module>microservice-config-server-encryption-rsa</module>
+        <module>microservice-config-client-refresh</module>
+        <module>microservice-config-client-refresh-cloud-bus</module>
+        <module>microservice-config-server-bus-better</module>
     </modules>
 
     <!--系统公共的属性-->
