add config for eureka

--- a/microservice-config-client/src/main/resources/bootstrap.yml
+++ b/microservice-config-client/src/main/resources/bootstrap.yml
@@ -1,8 +1,9 @@
 spring:
   application:
-    name: config
+    name: microservice-config-client
   cloud:
     config:
       uri: http://localhost:8080
       profile: dev
       label: master
+      name: config
