--- a/microservice-config-server-bus-better/src/main/resources/application.yml
+++ b/microservice-config-server-bus-better/src/main/resources/application.yml
@@ -13,8 +13,8 @@ spring:
     config:
       server:
         git:
-          password: 201025xym##$$
-          username: xym_loveit@126.com
+          password: xxxxx
+          username: xxxxxx
           uri: https://github.com/xym-loveit/springCloud-project.git
           search-paths: config-repo
     bus:
