--- a/microservice-config-server/src/main/resources/application.yml
+++ b/microservice-config-server/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
     config:
       server:
         git:
-          password: 201025xym##$$
-          username: xym_loveit@126.com
+          password: xxxxx
+          username: xxxxx
           uri: https://github.com/xym-loveit/springCloud-project.git
           search-paths: config-repo
 logging:
